2002-08-29  Ulrich Drepper  <drepper@redhat.com>

	* libio/fileops.c (_IO_new_file_fopen): Recognize new mode specifier
	'm' to enable mmap I/O.
	* libio/libio.h (_IO_FILE): Rename _blksize field to _flags2.  The
	former wasn't used (anymore?).
	(_IO_FLAGS2_MMAP): New define.
	* libio/genops.c (_IO_no_init): Initialize _flags2 field.
	* libio/iofopen.c (__fopen_maybe_mmap): Use mmap callbacks only if
	_IO_FLAGS2_MMAP bit is set.
	* libio/iofdopen.c (_IO_new_fdopen): Recognize 'm' mode specifier.
	Enable mmap-using mode only if 'm' was set.

2002-08-29  Roland McGrath  <roland@redhat.com>

	* sysdeps/mach/hurd/i386/init-first.c (_hurd_stack_setup: doinit):
	Change argument type from int to intptr_t.

	* locale/global-locale.c (__libc_tsd_LOCALE_data): Conditionalize the
	initializer on [! _HURD_THREADVAR_H] (bad kludge).
	* sysdeps/mach/hurd/i386/init-first.c (init): Initialize
	_HURD_THREADVAR_LOCALE slot to &_nl_global_locale.
	* hurd/hurdsig.c (_hurdsig_init): Likewise.  Zero other slots.

	* sysdeps/mach/_strerror.c (__strerror_r): Add libc_hidden_def.

	* sysdeps/mach/hurd/pwrite64.c: No libc_hidden_def (__libc_pwrite64).

	* sysdeps/mach/hurd/dl-sysdep.c (__GI_abort): Define alias for abort.

	* include/assert.h (__assert_perror_fail): Declare it, do hidden_proto.
	* assert/assert-perr.c: Add libc_hidden_def.
	* elf/dl-minimal.c [! NDEBUG] (__assert_perror_fail): New function.

	* sysdeps/gnu/errlist-compat.awk: Don't fail if there are no versions
	found at all.
	* sysdeps/gnu/Versions: File removed.  Moved all #errlist-compat
	sys_errlist stuff to ...
	* sysdeps/unix/sysv/linux/Versions: ... here.

	* mach/mach.h: Include <features.h>.

	* elf/dl-runtime.c (IN_DL_RUNTIME): Define this macro first thing.
	* sysdeps/i386/dl-machine.h: Only declare fixup, profile_fixup and
	define ELF_MACHINE_RUNTIME_TRAMPOLINE under #ifdef IN_DL_RUNTIME.

	* sysdeps/generic/readelflib.c (process_elf_file): Fix typo.

	* iconv/gconv_int.h: Include <stdlib.h> for alloca decl.